# agents_ai

./: README.md
DataAnalystEngine/: data.csv  data_analyst.py
Echo Chat Agent/: echo_agent.py  memory.json  output.js  output.json
Multi-agent-System/: multi_agent.py
SendNotificationAgent/: slack_agent.py
WebSearch/: web_search.py
longtermmemory/: embeddings.js  long_term_memory.py
multimodeagents/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  config.py  docker-compose.yml  env.example  multi_mode_agents.py  pyproject.toml  requirements.txt  setup.py
